<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.ludus.curso.registrousuario.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/margin_general"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/t_reg_usuario"
                    android:layout_margin="@dimen/margin_et"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_et"
                    android:layout_marginTop="@dimen/margin_et">

                    <EditText
                        android:id="@+id/etNombre"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/t_nombre"
                        android:saveEnabled="false"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_et"
                    android:layout_marginTop="@dimen/margin_et">

                    <EditText
                        android:id="@+id/etApellidos"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:saveEnabled="false"
                        android:hint="@string/t_apellidos"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_et"
                    android:layout_marginTop="@dimen/margin_et">

                    <EditText
                        android:id="@+id/etCorreo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:saveEnabled="false"
                        android:hint="@string/t_correo"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_et"
                    android:layout_marginTop="@dimen/margin_et">

                    <EditText
                        android:id="@+id/etUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:saveEnabled="false"
                        android:hint="@string/t_usuario"

                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_et"
                    android:layout_marginTop="@dimen/margin_et">

                    <EditText
                        android:id="@+id/etContrasena"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:saveEnabled="false"
                        android:hint="@string/t_contrasena"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/btEnviar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/t_enviar"
                    android:layout_marginTop="@dimen/margin_et"
                    android:layout_marginBottom="@dimen/margin_general"/>


            </LinearLayout>

        </ScrollView>


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
